fixed minor bugs, table spacing and body margin

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+}
+
 .container {
     width: 1080px;
     margin: 0px auto;
@@ -56,9 +60,8 @@ td{
     width: 350px;
 }
 
-table, tr, td {
-    border: none;
-    padding: none;
+table, tr, td { 
+    border-spacing: 0;
 }
 
 .table-description {
